# faxedit

./: .gitignore  CMakeLists.txt  faxedit.sln  readme.md
common/source/: Bitreader.cpp  Bitreader.h
common/source/kfile/: Kfile.cpp  Kfile.h
docs/: catalogue.md  doc.md
faxedit/: eoe_config.xml  faxedit.vcxproj  faxedit.vcxproj.filters
faxedit/src/: main.cpp
faxedit/src/common/imguifiledialog/: ImGuiFileDialog.cpp  ImGuiFileDialog.h
faxedit/src/common/klib/: Asm6502.cpp  Asm6502.h  Bitreader.cpp  Bitreader.h  Bitwriter.cpp  Bitwriter.h  IPS_Patch.cpp  Kfile.cpp  Kfile.h  Kstring.cpp  Kstring.h  Kutil.h  NES_tile.cpp  NES_tile.h  SDL_WindowConfig.cpp  SDL_WindowConfig.h
faxedit/src/fe/: ChrStructures.cpp  ChrStructures.h  Chunk.cpp  Chunk.h  Chunk_door_connections.cpp  Chunk_door_connections.h  Cinematic.cpp  Cinematic.h  Config.cpp  Config.h  Door.cpp  Door.h  EditorSettings.cpp  EditorSettings.h  Game.cpp  Game.h  GameGfxTilemap.cpp  GameGfxTilemap.h  GfxTilemapManager.cpp  GfxTilemapManager.h  GodAllocator.cpp  GodAllocator.h  InterChunkScroll.cpp  InterChunkScroll.h  IntraChunkScroll.cpp  IntraChunkScroll.h  Metatile.cpp  Metatile.h  MetatileRef.cpp  MetatileRef.h  PaletteMusicMap.cpp  PaletteMusicMap.h  ROM_Manager.cpp  ROM_Manager.h  Scene.h  Screen.cpp  Screen.h  ScreenRef.cpp  ScreenRef.h  Sprite.cpp  (+11 more)
faxedit/src/fe/sprite/: SpriteAnimationFrame.cpp  SpriteAnimationFrame.h  SpriteFrameCollection.cpp  SpriteFrameCollection.h  SpriteGUILoader.cpp  SpriteGUILoader.h  SpriteGfxManager.cpp  SpriteGfxManager.h  SpriteGfxSnapshotManager.cpp  SpriteGfxSnapshotManager.h  fe_sprite_constants.h
faxedit/src/fe/xml/: Xml_constants.h  Xml_helper.cpp  Xml_helper.h
faxedit/src/fg/: AnimationFrame.cpp  AnimationFrame.h  GraphicsCollection.h  GraphicsManager.cpp  GraphicsManager.h  ObjectAnimation.h
faxedit/src/fi/: FaxString.cpp  FaxString.h  IScriptLoader.cpp  IScriptLoader.h  Opcode.cpp  Opcode.h  Shop.cpp  Shop.h  fi_constants.h
faxedit/src/windows/: Chunk_window.cpp  CinematicWindow.cpp  ClipBoardManager.cpp  ClipBoardManager.h  ControlWindow.cpp  Game_window.cpp  GfxWindow.cpp  IScriptWindow.cpp  Imgui_helper.h  MainWindow.cpp  MainWindow.h  MetaDataWindow.cpp  Screen_window.cpp  SettingsWindow.cpp  SpriteGfxWindow.cpp  TilemapWindow.cpp  UndoInterface.cpp  UndoInterface.h  WorldVisualizationWindow.cpp  gfx.cpp  gfx.h  imgui_helper.cpp
scripts/: mac-build.sh  mac-dist.sh
util/: eoe_config_override.xml
